# tree-disk-segmentation

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
src/: u2net.py
src/treedisksegmentation/: __init__.py  cli.py  config.py  main.py
src/treedisksegmentation/models/: u2net.py  utils.py
src/treedisksegmentation/segmentation/: segmentation.py
src/treedisksegmentation/utils/: file_utils.py
src/utils/: file_utils.py
tests/: test_segmentation.py
